--- a/web-application-testing/src/App.css
+++ b/web-application-testing/src/App.css
@@ -31,3 +31,19 @@
     transform: rotate(360deg);
   }
 }
+
+.button-container {
+  width: 600px;
+  display: flex;
+  justify-content: center;
+}
+
+button {
+  background-color: yellow;
+  /* border: 5px solid red; */
+  color: black;
+  justify-content: row;
+  padding: 20px;  
+  margin: 10px 15px;
+  border-radius: 10px;
+}
